--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8888
   servlet:
-    context-path: /blog
+    context-path: /side-project
 spring:
   thymeleaf:
     cache: false
